tests/snapshots/docx/pandoc/trailing_spaces_in_formatting.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Turn my " },
    StartTextStyle { kind: Italic, id: None },
    Text { content: "formatting   " },
    EndTextStyle,
    Text { content: "off after the spaces." },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
