tests/snapshots/docx/pandoc/trim_last_inline.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: Bold, id: None },
    Text { content: "Foo bar.            " },
    EndTextStyle,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Fizz pop." },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
