tests/snapshots/docx/pandoc/unicode.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Hello, " },
    Text { content: "世" },
    Text { content: "界" },
    Text { content: "." },
    Text { content: " This costs " },
    Text { content: "€10." },
    Text { content: "∨" },
    Text { content: "∨" },
    Text { content: "(" },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
