tests/snapshots/docx/pandoc/unused_anchors.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartHeading { id: None, level: 1 },
    Text { content: "My Section" },
    EndHeading,
    StartParagraph { alignment: None, id: None },
    StartLink { href: "#Bar", id: None, title: None },
    Text { content: "Here is a link." },
    EndLink,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Here is the target." },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
