tests/snapshots/docx/pandoc/zotero_citations.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "This is a citation " },
    Text { content: "(Smith et al., 2013)" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "This is a citation with two sources " },
    Text { content: "(Boer et al., 2016; Smith et al., 2013)" },
    Text { content: "." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "This is a citation with additional prefix,  suffix and a page number " },
    Text { content: "(prefix Bellomo et al., 2016, p. 2 suffix)" },
    Text { content: "." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartHeading { id: None, level: 1 },
    Text { content: "Reference list" },
    EndHeading,
    StartParagraph { alignment: None, id: None },
    Text { content: "Bellomo, K., Clement, A. C., Murphy, L. N., Polvani, L. M., & Cane, M. A. (2016). New observational evidence for a positive cloud feedback that amplifies the Atlantic Multidecadal Oscillation. " },
    StartTextStyle { kind: Italic, id: None },
    Text { content: "Geophys. Res. Lett." },
    EndTextStyle,
    Text { content: ", " },
    StartTextStyle { kind: Italic, id: None },
    Text { content: "43" },
    EndTextStyle,
    Text { content: "(18), 9852–9859. https://doi.org/10.1002/2016GL069961" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Boer, G. J., Smith, D. M., Cassou, C., Doblas-Reyes, F., Danabasoglu, G., Kirtman, B., Kushnir, Y., Kimoto, M., Meehl, G. A., Msadek, R., Müller, W. A., Taylor, K. E., Zwiers, F., Rixen, M., Ruprich-Robert, Y., & Eade, R. (2016). The Decadal Climate Prediction Project (DCPP). " },
    StartTextStyle { kind: Italic, id: None },
    Text { content: "Geoscientific Model Development" },
    EndTextStyle,
    Text { content: ", " },
    StartTextStyle { kind: Italic, id: None },
    Text { content: "9" },
    EndTextStyle,
    Text { content: ", 3751–3777. https://doi.org/10.5194/gmd-9-3751-2016" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Smith, D. M., Eade, R., & Pohlmann, H. (2013). A comparison of full-field and anomaly initialization for seasonal to decadal climate prediction. " },
    StartTextStyle { kind: Italic, id: None },
    Text { content: "Climate Dynamics" },
    EndTextStyle,
    Text { content: ", " },
    StartTextStyle { kind: Italic, id: None },
    Text { content: "41" },
    EndTextStyle,
    Text { content: "(11–12), 3325–3338. https://doi.org/10.1007/s00382-013-1683-2" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
